@@ -1,5 +1,7 @@
 package org.testng.internal.thread;
 
+import org.testng.ITestNGMethod;
+
 /** Exception used to signal a thread timeout. */
 public class ThreadTimeoutException extends Exception {
 
@@ -13,7 +15,7 @@ public class ThreadTimeoutException extends Exception {
     super(cause);
   }
 
-  public ThreadTimeoutException(String msg, Throwable cause) {
-    super(msg, cause);
+  public ThreadTimeoutException(ITestNGMethod tm, long timeout) {
+    this("Method " + tm.getQualifiedName() + "() didn't finish within the time-out " + timeout);
   }
 }
